syntax="proto3";

package calculator;

option go_package="github.com/vallarasuSJ/grpc_go_course/calculator/proto";

message SubRequest{
    int32 firstNumber=1;
    int32 secondNumber=2;
}

message SubResponse{
    int32 result=1;
}